app/assets/stylesheets/autocomplete.scss
$img-width: 40px;
$img-margin: 3px;
.linky {
  color: #36C;
}
.ui-autocomplete {
  cursor: pointer;
  padding: 0px;
  .ac {
    min-width: 370px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    width: 100%;

    .ac-label {
      width: 100%;
    }
  }
  &.projects {
    max-height: 315px;
    overflow: auto;
    width: 373px;
    .ac {
      width: 355px;
      min-width: 355px;
    }
  }
  .category {
    background: white;
    cursor: default;
    list-style: none;
    padding-left: 10px;
    color: #666;
    line-height: 32px;
    background: #eee;
  }
}
.ac-message[data-type='message'] {
  cursor: default;
}
.ui-autocomplete .ac.ac-message {
  height: 36px;
}
.ui-autocomplete .ac-thumb {
  width: $img-width + $img-margin * 2;
  display: inline-block;
  text-align: center;
  vertical-align: top;
}
.ui-autocomplete .ac-thumb,
.ui-autocomplete .ac-label,
.ui-autocomplete .ac-view {
  vertical-align: middle;
}

.ui-autocomplete .ac-message .ac-thumb {
  width: 49px;
  padding-left: 5px;
}
.ui-autocomplete .ac-view {
  float: right;
  padding: 0 10px;
  line-height: 46px;
  text-align: right;
  background: white;
  display: inline-block;
}
.ui-autocomplete .ac-thumb img {
  width: $img-width;
  height: $img-width;
  margin: $img-margin;
  display: block;
}
.ui-autocomplete .ac-message .ac-thumb img {
  width: 30px;
  height: 30px;
}
.ui-autocomplete .ac-message .ac-thumb .glyphicon {
  top: 2px;
}
.ui-autocomplete .ac-result {
  list-style: none;
  &.ui-state-focus {
    background: #f6f6f6;
  }
  .vision {
    .ac-thumb {
      width: 55px;
      img {
        width: 50px;
        height: 50px;
      }
    }
    .ac-label {
      padding: 4px;
      .subtitle.vision {
        color: #74ac00;
      }
    }
    .ac-view {
      line-height: 56px;
    }
  }
  img.user_image {
    width: 16px;
    height: 16px;
    margin-right: 5px;
    float: left;
  }
}
.ui-autocomplete .ac-result.active {
  background: #F2F2F2;
}
.ac-result .ac-label {
  padding: 2px 0 0 7px;
  line-height: 18px;
}
.ac-result.taxon .ac-label {
  display: inline-block;
}
.ui-autocomplete .identification .ac-label {
  display: inline-block;
}
.ui-autocomplete .user .ac-label {
  display: inline-block;
}
.ui-autocomplete .ac-message .ac-label {
  padding: 0 0 0 12px;
  line-height: 36px;
}
.ui-autocomplete .ac-message .ac-label .title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.ui-autocomplete .ac-placeholder {
  font-weight: bold;
}
.ui-autocomplete .ac-label .title, .ui-autocomplete .ac-label .chooseritem {
  font-size: 1.1em;
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.ui-autocomplete .ac-label .subtitle {
  font-size: 0.9em;
  display: block;
  color: #727272;
  line-height: 17px;
}
.ui-widget-content .ui-state-focus {
  border: none;
}
.ui-autocomplete {
  li.ac-result + li.ac-result {
    border-top: 1px solid #D8D8D8;
  }
}
.ui-autocomplete .ac-result .ac a {
  padding: 0px;
  display: inline;
}
.buttonrow .ac-chooser {
  display: inline-block;
}
.ac-chooser {
  white-space: nowrap;
}
.ac-chooser .species_guess.ui-autocomplete-input {
  width: 190px;
}
.ac-select-thumb {
  width: 31px;
  float: left;
  margin-right: 5px;
  text-align: center;
}
.ac-select-thumb img {
  width: 31px;
  height: 31px;
}
.ac-thumb i,
.ac-select-thumb i {
  font-size: 24px;
  line-height: 1;
  vertical-align: middle;
}
.ac-result.place .ac-label {
  max-width: 100%;
}
.ac-result.place .title {
  float: left;
  margin-right: 8px;
  max-width: 100%;
}
.ac-result.place .type {
  float: left;
  font-size: 0.9em;
  text-transform: uppercase;
  color: rgba(0, 0, 0, .5);
}
.ac-chooser {
  position: relative;
}
.ac-chooser .searchclear.glyphicon {
  position: absolute;
  right: 10px;
  top: 10px;
  padding-left: 5px;
  color: #ddd;
  background: #fff;
  z-index: 3;
}
.ac-chooser .small .searchclear.glyphicon {
  top: 8px;
}
input.filter-changed + .searchclear.glyphicon {
  background: none;
  color: #bbb;
}
.searchclear.glyphicon:hover, input.filter-changed + .searchclear.glyphicon:hover {
  color: #666;
  cursor: pointer;
}

